[tool.poetry]
name = "genstardb"
version = "0.1.0"
description = "Acquire and preprocess information of stars."
authors = ["Karno <karnoroid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
astropy = "^4.2.1"

[tool.poetry.dev-dependencies]
black = { version = "^20.8b1", allow-prereleases = true }
pytest = "^6.2.3"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
